fixed loading not centered + added a little message in the console for curious people

--- a/css/index.css
+++ b/css/index.css
@@ -15,10 +15,10 @@
 
 @keyframes slide-in {
     from {
-        left: 125%
+        left: 130%
     }
     to {
-        left: 25%
+        left: 30%
     }
 }
 
